8115
No comment on whether it makes sense or not, but you can see many places the compiler requires 'override type' on type aliases in the compiler source itself. Including the example which led to this ticket.

Removing an override:
```scala
% ./build/pack/bin/scalac src/reflect/scala/reflect/internal/StdNames.scala
src/reflect/scala/reflect/internal/StdNames.scala:228: error: overriding type NameType in trait TypeNamesApi, which equals StdNames.this.TypeName;
 type NameType needs `override' modifier
    type NameType = TypeName
         ^
one error found
```
